Added caching to gitlab CI
Signed-off-by: @Sakul6499 | Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,9 @@ build:
   script:
     - yarn install
     - yarn build
+  cache:
+    paths:
+      - node_modules/
   artifacts:
     paths:
         - build/
