--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "markdown": "^0.5.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
+    "react-device-detect": "^1.9.10",
     "react-dom": "^16.10.1",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.2",
