Added homepage tag to package.json
Signed-off-by: @Sakul6499 | Lukas Weber <me@sakul6499.de>

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sakul6499.de",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sakul6499.de/",
   "dependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
