--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ deploy_staging:
     - ssh-add <(echo "$PRIVATE_KEY")
   script:
     - ssh deploy@raw.sakul6499.de "mkdir -p /var/www/staging.sakul6499.de_tmp/"
-    - rsync -rav -e ssh build/* deploy@raw.sakul6499.de:/var/www/staging.sakul6499.de_tmp/
+    - rsync -rav -O -e ssh build/* deploy@raw.sakul6499.de:/var/www/staging.sakul6499.de_tmp/
     - ssh deploy@raw.sakul6499.de "rm -rf /var/www/staging.sakul6499.de/"
     - ssh deploy@raw.sakul6499.de "mv /var/www/staging.sakul6499.de_tmp/ /var/www/staging.sakul6499.de/"
   environment:
