Added new rsync command to master deploy
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ deploy_master:
     - ssh-add <(echo "$PRIVATE_KEY")
   script:
     - ssh deploy@raw.sakul6499.de "mkdir -p /var/www/sakul6499.de_tmp/"
-    - rsync -rav -e ssh build/* deploy@raw.sakul6499.de:/var/www/sakul6499.de_tmp/
+    - rsync -ravz -I -O --no-perms --no-owner --no-group --delete -e ssh build/* deploy@raw.sakul6499.de:/var/www/sakul6499.de_tmp/
     - ssh deploy@raw.sakul6499.de "rm -rf /var/www/sakul6499.de/"
     - ssh deploy@raw.sakul6499.de "mv /var/www/sakul6499.de_tmp/ /var/www/sakul6499.de/"
   environment:
