--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,3 +76,12 @@ deploy_master:
     - master
   needs:
     - build
+
+include:
+  template: Dependency-Scanning.gitlab-ci.yml
+
+include:
+  template: Container-Scanning.gitlab-ci.yml
+
+include:
+  template: SAST.gitlab-ci.yml
