Applied prior changes to build task
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,14 @@ build:
   artifacts:
     paths:
       - build/
+  only:
+    - api
+    - pipelines
+    - pushes
+    - schedule
+    - triggers
+    - web
+    - merge_requests
 
 deploy_staging:
   stage: deploy
