--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "private": true,
   "homepage": "https://sakul6499.de/",
   "dependencies": {
-    "@types/jest": "24.0.25",
-    "@types/node": "12.12.22",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@types/react-router-dom": "5.1.3",
-    "@types/styled-components": "4.4.1",
-    "bulma": "0.7.5",
-    "bulma-tooltip": "2.0.2",
-    "markdown": "0.5.0",
-    "node-sass": "4.13.0",
-    "react": "16.12.0",
-    "react-device-detect": "1.11.14",
-    "react-dom": "16.12.0",
-    "react-icons": "3.8.0",
-    "react-router-dom": "5.1.2",
-    "react-scripts": "3.3.0",
-    "styled-components": "4.4.1",
-    "trianglify": "2.0.0",
-    "tslint": "5.20.1",
-    "tslint-react": "4.1.0",
-    "typescript": "3.7.4"
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.4",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/styled-components": "^4.1.19",
+    "bulma": "^0.7.5",
+    "bulma-tooltip": "^2.0.2",
+    "markdown": "^0.5.0",
+    "node-sass": "^4.12.0",
+    "react": "^16.10.1",
+    "react-device-detect": "^1.9.10",
+    "react-dom": "^16.10.1",
+    "react-icons": "^3.7.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.1.2",
+    "styled-components": "^4.4.0",
+    "trianglify": "^2.0.0",
+    "tslint": "^5.20.0",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
