--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,6 @@
 {
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base"],
+  "automerge": false,
+  "assignAutomerge": true,
+  "assignees": ["@sakul6499"]
 }
