Changed GitLab CI to build if build.docker changed
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ docker_build_image:
     - docker push $IMAGE_NAME:latest
   only:
     changes:
-      - "Dockerfile"
+      - "build.docker"
 
 build:
   stage: build
