Changed GitLab CI to build the correct Dockerfile
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ docker_build_image:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
-    - docker build -f Dockerfile -t $IMAGE_NAME -t $IMAGE_NAME:latest .
+    - docker build -f build.docker -t $IMAGE_NAME -t $IMAGE_NAME:latest .
     - docker push $IMAGE_NAME:latest
   only:
     changes:
