--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,11 @@ services:
         links:
             - mongodb
         ports:
-            - 8080:8080
+            - 8081:8080
+
+    frontend:
+        build: frontend/.
+        links:
+            - backend
+        ports:
+            - 8080:80
