--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,4 +12,5 @@ RUN yarn install && yarn build
 
 FROM nginx:latest
 COPY --from=build /project/build/ /usr/share/nginx/html/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80/tcp
