--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         ports:
             - 27017:27017
 
-    mongo_seed:
+    mongo-seed:
         build: docker/mongo-seed/.
         links:
             - mongodb
@@ -16,7 +16,7 @@ services:
         links:
             - mongodb
         ports:
-            - 8081:8080
+            - 8081:8081
 
     frontend:
         build: frontend/.
