Added drop flag to mongo-seed/Dockerfile

--- a/docker/mongo-seed/Dockerfile
+++ b/docker/mongo-seed/Dockerfile
@@ -3,6 +3,7 @@ FROM mongo
 COPY posts.json /posts.json
 
 CMD mongoimport         \
+    --drop              \
     --host mongodb      \
     --db blog           \
     --collection posts  \
