Updated nginx.conf to properly handle react-router URLs

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,7 +3,8 @@ server {
     server_name sakul6499.de;
 
     location / {
-          root   /usr/share/nginx/html;
-          index  $uri $uri/ /index.html;
+        root        /usr/share/nginx/html;
+        index       index.html;
+        try_files   $uri $uri/ /index.html;
     }
 }
