--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 out/
 build/
 
+# Generated files
+posts.json
+
 # Rust
 target/
 *.lock
@@ -14,6 +17,8 @@ pkg/
 
 # VSCode
 .vscode/
+.project
+org.eclipse.buildship.core.prefs
 
 # IDEA
 .idea/
