Added Dockerfile with mutli-stage build for postSeeder
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/docker/mongo-seed/Dockerfile
+++ b/docker/mongo-seed/Dockerfile
@@ -1,7 +1,17 @@
+FROM rust as postSeederBuild
+COPY postSeeder /postSeeder
+WORKDIR /postSeeder
+RUN cargo build --release 
+
+FROM ubuntu as postSeederGen
+COPY --from=postSeederBuild /postSeeder/target/release/post_seeder /bin/post_seeder
+COPY posts /posts
+WORKDIR /
+RUN /bin/post_seeder
+
 FROM mongo
-
-COPY posts.json /posts.json
-
+COPY --from=postSeederGen /posts.json /posts.json
+WORKDIR /
 CMD mongoimport         \
     --drop              \
     --host mongodb      \
