Renamed 'mongo-seed' to 'mongo-seeder'
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
         ports:
             - 27017:27017
 
-    mongo-seed:
-        build: docker/mongo-seed/.
+    mongo-seeder:
+        build: docker/mongo-seeder/.
         links:
             - mongodb
 
