Changed docker-build images to docker/compose
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 build_frontend:
   stage: build
-  image: docker
+  image: docker/compose
   services:
     - docker:dind
   variables:
@@ -19,7 +19,7 @@ build_frontend:
 
 build_backend:
   stage: build
-  image: docker
+  image: docker/compose
   services:
     - docker:dind
   variables:
@@ -33,7 +33,7 @@ build_backend:
 
 build_mongo-seeder:
   stage: build
-  image: docker
+  image: docker/compose
   services:
     - docker:dind
   variables:
