--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /home/gradle/project
 COPY . .
 RUN gradle build
 
-FROM openjdk/11-alpine
+FROM openjdk/11
 RUN mkdir /opt/app
 WORKDIR /opt/app
 COPY --from=build /home/gradle/project/build/libs/backend-0.0.1-SNAPSHOT.jar /opt/app/backend-0.0.1-SNAPSHOT.jar
