--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,8 @@ build_frontend:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
-    - docker-compose build frontend
+    - ./make_docker_files.sh x86
+    - docker-compose -f docker-compose.yml.out build frontend
   only:
     - branches
     - tags
@@ -40,7 +41,8 @@ build_backend:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
-    - docker-compose build backend
+    - ./make_docker_files.sh x86
+    - docker-compose -f docker-compose.yml.out build backend
   only:
     - branches
     - tags
@@ -65,7 +67,8 @@ build_mongo-seeder:
     - docker info
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
-    - docker-compose build mongo-seeder
+    - ./make_docker_files.sh x86
+    - docker-compose -f docker-compose.yml.out build mongo-seeder
   only:
     - branches
     - tags
@@ -88,6 +91,7 @@ build_remote:
     - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
     - ssh-add <(echo "$PRIVATE_KEY")
   script:
+    - ./make_docker_files.sh arm
     - ssh deploy@raw.sakul6499.de "rm -rf website; mkdir -p website"
     - rsync -ravz -I -O --no-perms --no-owner --no-group --delete -e ssh * deploy@raw.sakul6499.de:/home/deploy/website/
     - ssh deploy@raw.sakul6499.de "cd website; docker-compose build && docker-compose push"
