--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,7 +99,7 @@ build_remote:
   script:
     - ssh deploy@raw.sakul6499.de "rm -rf website; mkdir -p website"
     - rsync -ravz -I -O --no-perms --no-owner --no-group --delete -e ssh * deploy@raw.sakul6499.de:/home/deploy/website/
-    - ssh deploy@raw.sakul6499.de "cd website && sh make_docker_files.sh"
+    - ssh deploy@raw.sakul6499.de "cd website && bash make_docker_files.sh"
     - ssh deploy@raw.sakul6499.de "cd website && docker-compose -f docker-compose.yml.out build"
     - ssh deploy@raw.sakul6499.de "cd website && docker tag sakul6499de_frontend registry.gitlab.com/sakul6499.de/sakul6499.de/frontend:arm"
     - ssh deploy@raw.sakul6499.de "cd website && docker tag sakul6499de_backend registry.gitlab.com/sakul6499.de/sakul6499.de/backend:arm"
