Added python to frontend docker image
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:latest AS build
-RUN apk update && apk add nodejs npm yarn openssh rsync python3
+RUN apk update && apk add nodejs npm yarn openssh rsync python python3
 
 WORKDIR /project
 COPY . .
