Updated make_docker_files.sh to support a deploy option
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,7 @@ services:
                 constraints: [node == homelab]
 
     mongo-seeder:
-        build:
-            context: docker/mongo-seeder
-            dockerfile: Dockerfile.out
+        @MONGO_SEEDER@
         links:
             - mongodb
         deploy:
@@ -22,9 +20,7 @@ services:
                 constraints: [node == homelab]
 
     backend:
-        build:
-            context: backend
-            dockerfile: Dockerfile.out
+        @BACKEND@
         links:
             - mongodb
         ports:
@@ -33,9 +29,7 @@ services:
             replicas: 1
 
     frontend:
-        build:
-            context: frontend
-            dockerfile: Dockerfile.out
+        @FRONTEND@
         links:
             - backend
         ports:
