Changed CODEOWNERS to own everything
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,6 +1,1 @@
-public/* @sakul6499
-src/* @sakul6499
-redirects/* @sakul6499
-Dockerfile @sakul6499
-favicon.ico @sakul6499
-package.json @sakul6499
+* @sakul6499
