--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,18 @@
-* @sakul6499
+backend/                @Sakul6499
+docker/                 @Sakul6499
+frontend/               @Sakul6499
+redirects/              @Sakul6499
+.dockerignore           @Sakul6499
+.gitattributes          @Sakul6499
+.gitignore              @Sakul6499
+.gitlab-ci.yml          @Sakul6499
+.gitmodules             @Sakul6499
+build.docker            @Sakul6499
+CODEOWNERS              @Sakul6499
+docker-compose.yml      @Sakul6499
+favicon.kra             @Sakul6499
+LICENSE                 @Sakul6499
+make_docker_files.sh    @Sakul6499
+README.md               @Sakul6499
+renovate.json           @Sakul6499
+serve.docker            @Sakul6499
