Changed logic in deploy CI task
Signed-off-by: Lukas Weber <me@sakul6499.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,7 +125,7 @@ deploy:
     - ssh deploy@raw.sakul6499.de "rm -rf website; mkdir -p website"
     - rsync -ravz -I -O --no-perms --no-owner --no-group --delete -e ssh * deploy@raw.sakul6499.de:/home/deploy/website/
     - ssh deploy@raw.sakul6499.de "cd website && bash make_docker_files.sh deploy"
-    - ssh deploy@raw.sakul6499.de "cd website && docker stack rm website && docker network rm website_default && docker stack deploy --compose-file docker-compose.yml.out website"
+    - ssh deploy@raw.sakul6499.de "cd website && docker stack rm website; docker network rm website_default; docker stack deploy --compose-file docker-compose.yml.out website"
   environment:
     name: master
     url: https://sakul6499.de
