--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,8 +125,8 @@ deploy:
     - ssh deploy@raw.sakul6499.de "rm -rf website; mkdir -p website"
     - rsync -ravz -I -O --no-perms --no-owner --no-group --delete -e ssh * deploy@raw.sakul6499.de:/home/deploy/website/
     - ssh deploy@raw.sakul6499.de "cd website && bash make_docker_files.sh deploy"
-    - ssh deploy@raw.sakul6499.de "cd website && docker stack rm website"
-    - ssh deploy@raw.sakul6499.de "cd website && docker network rm website_default || true"
+    - ssh deploy@raw.sakul6499.de "cd website && docker stack rm website; sleep 15"
+    - ssh deploy@raw.sakul6499.de "cd website && docker network rm website_default || true; sleep 15"
     - ssh deploy@raw.sakul6499.de "cd website && docker stack deploy --compose-file docker-compose.yml.out website"
   environment:
     name: master
