--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": ["config:base"],
-  "automerge": false,
+  "automerge": true,
   "assignAutomerge": true,
   "assignees": ["@sakul6499"]
 }
