Updated submodule URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@bitbucket.org:sakul6499/sakul6499.bitbucket.io.git
 [submodule "frontend"]
 	path = frontend
-	url = git@gitlab.com:sakul6499.de/frontend.git
+	url = https://gitlab.com/sakul6499.de/frontend.git
