Using different image for pre_init

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 
 pre_init:
   stage: pre_init
-  image: ubuntu
+  image: alpine/git
   script:
     - git submodule update --init --recursive
     - git submodule update --recursive --remote
