Using alpine image for pre_init

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,9 @@ stages:
 
 pre_init:
   stage: pre_init
-  image: alpine/git
+  image: alpine
+  before_script:
+    - apk update && apk add git
   script:
     - git submodule update --init --recursive
     - git submodule update --recursive --remote
